<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/20
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_16">

    <com.app.etow.ui.widget.textview.TahomaBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:text="@string/trip_rejected"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xnormal" />

    <com.app.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:gravity="center"
        android:text="@string/specify_reason_rejecting"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:background="@color/dividerColor" />

    <RadioGroup
        android:id="@+id/rdg_reason_reject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_12">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason_reject_1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@color/dividerColor" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:text="@string/reason_reject_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:background="@color/dividerColor" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_12"
            android:text="@string/reason_reject_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@color/dividerColor" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_12"
            android:text="@string/reason_reject_4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@color/dividerColor" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/define_dimen_20"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:orientation="horizontal">

        <com.app.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey_corner_left_bottom"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_14"
            android:paddingTop="@dimen/define_dimen_14"
            android:text="@string/action_no"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_normal" />

        <com.app.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_black_corner_right_bottom"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_14"
            android:paddingTop="@dimen/define_dimen_14"
            android:text="@string/action_yes"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</LinearLayout>
