<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/20
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_16">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/dividerColor" />

    <com.app.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:text="@string/filter_by"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xnormal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rdg_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/define_dimen_50"
                android:text="@string/cash"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />

            <RadioButton
                android:id="@+id/rdb_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/define_dimen_20"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:orientation="horizontal">

        <com.app.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey_corner_left_bottom"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_14"
            android:paddingTop="@dimen/define_dimen_14"
            android:text="@string/clear"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_normal" />

        <com.app.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_black_corner_right_bottom"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_14"
            android:paddingTop="@dimen/define_dimen_14"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</LinearLayout>
