<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/20
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/define_dimen_100"
        android:layout_height="@dimen/define_dimen_100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/define_dimen_100"
        android:src="@drawable/ic_etow_and_text_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/dividerColor" />

        <com.app.etow.ui.widget.textview.TahomaRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:text="@string/cash_received_2"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <com.app.etow.ui.widget.textview.TahomaRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:gravity="center"
            android:text="@string/message_confirm_collected_cash"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/define_dimen_20"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:orientation="horizontal">

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_corner_left_bottom"
                android:gravity="center"
                android:paddingBottom="@dimen/define_dimen_14"
                android:paddingTop="@dimen/define_dimen_14"
                android:text="@string/action_no"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:id="@+id/tv_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_black_corner_right_bottom"
                android:gravity="center"
                android:paddingBottom="@dimen/define_dimen_14"
                android:paddingTop="@dimen/define_dimen_14"
                android:text="@string/action_yes"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
