<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="@dimen/define_dimen_16"
    app:cardCornerRadius="@dimen/define_dimen_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="@dimen/define_dimen_6">

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Monday 19 Sep 2018"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="12:30 PM"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/define_dimen_6">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/define_dimen_6"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.app.etow.ui.widget.textview.TahomaRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_no"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/text_size_small" />

                <com.app.etow.ui.widget.textview.TahomaRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00200230323"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.app.etow.ui.widget.textview.TahomaRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_amount"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/text_size_small" />

                <com.app.etow.ui.widget.textview.TahomaRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1234 AED"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/define_dimen_6"
            android:layout_marginEnd="@dimen/define_dimen_6"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:background="@drawable/bg_grey_corner_radius_6"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_6">

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_location"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small" />

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123, First Time Street, Dubai, United Arap Emirated"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/define_dimen_6"
            android:layout_marginEnd="@dimen/define_dimen_6"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:background="@drawable/bg_grey_corner_radius_6"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_6">

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_off_location"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small" />

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123, Second Time Street, Dubai, United Arap Emirated"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/define_dimen_6"
            android:layout_marginEnd="@dimen/define_dimen_6"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_corner_radius_6"
                android:gravity="center"
                android:paddingBottom="@dimen/define_dimen_6"
                android:paddingTop="@dimen/define_dimen_6"
                android:text="@string/completed"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/define_dimen_6"
                android:layout_marginStart="@dimen/define_dimen_6"
                android:layout_weight="1"
                android:background="@drawable/bg_white_corner_border_grey_radius_8"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/define_dimen_6"
                android:paddingTop="@dimen/define_dimen_6">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cash_black" />

                <com.app.etow.ui.widget.textview.TahomaRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/define_dimen_6"
                    android:gravity="center"
                    android:text="@string/cash"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <com.app.etow.ui.widget.textview.TahomaRegularTextView
                android:id="@+id/tv_view_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_grey_corner_radius_6"
                android:gravity="center"
                android:paddingBottom="@dimen/define_dimen_6"
                android:paddingTop="@dimen/define_dimen_6"
                android:text="@string/view_details"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
